--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                                 </p> -->
                                 <img src="assets/img/hike.jpg" alt="hiking image" class="projects__img">
                                 <div>
-                                    <h3 class="testimonial__name">Love Hiking</h3>
+                                    <h3 class="testimonial__name">Love hiking</h3>
                                     <span class="testimonial__subtitle">Mount Fuji</span>
                                 </div>
                             </div>
