--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="" class="nav__link" target="_blank">
+                            <a href="https://drive.google.com/file/d/1VcSjo1qGGZoA0aH46pqpk9lvTx_HSNZe/view?usp=sharing" class="nav__link" target="_blank">
                                 <i class="ri-chat-3-line"></i> Resume
                             </a>
                         </li>
