fix resume link bug

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="https://drive.google.com/file/d/1VcSjo1qGGZoA0aH46pqpk9lvTx_HSNZe/view?usp=sharing" class="nav__link" target="_blank">
+                            <a href="https://drive.google.com/file/d/1my99VbZ0UyLF8H1XrbPr6ja-wvNlM_4D/view?usp=sharing" class="nav__link" target="_blank">
                                 <i class="ri-chat-3-line"></i> Resume
                             </a>
                         </li>
@@ -126,11 +126,10 @@
                             </h3>
                             
                             <p class="home__info-description">
-                                Hi, I'm Zoe, Full-stack Developer but focus more on Front-end.
+                                Hi, I'm Zoe.
+                                I am passionate about solving real-world problems by technology.
                                 Open to work.
-                                I expect to graduate from 
-                                Virginia Tech in May 2023. 
-                                Based in USA. 
+                                Master degree in Computer Science at Virginia Tech
                             </p>
                         </div>
 
@@ -216,6 +215,7 @@
                 <div class="container section__border">
                     <div class="projects__container swiper">
                         <div class="swiper-wrapper">
+                            
                             <!--==================== PROJECT 1 ====================-->
                             <div class="projects__content swiper-slide">
                                 <img src="assets/img/3d.png" alt="projects image" class="projects__img">
