--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                             </h3>
                             
                             <p class="home__info-description">
-                                Hi, I'm Zoe.
-                                I am passionate about solving real-world problems by technology.
-                                Open to work.
+                                Hi, I'm Zoe. <br>
+                                I am passionate about solving real-world problems by technology. <br>
+                                Open to work. <br>
                                 Master degree in Computer Science at Virginia Tech
                             </p>
                         </div>
