add work experience

--- a/index.html
+++ b/index.html
@@ -493,6 +493,13 @@
                         <div class="qualification__info">
                             <div>
                                 <h3 class="qualification__name">
+                                    Software Engineer 
+                                </h3>
+                                <span class="qualification__country">Formosa Plastics - USA</span>
+                                <span class="qualification__year">2023 - present</span>
+                            </div>
+                            <div>
+                                <h3 class="qualification__name">
                                     Software Engineer Intern
                                 </h3>
                                 <span class="qualification__country">Intuit - USA</span>
